@@ -34,7 +34,7 @@ requires:
   perl: 5.8.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Map-Tube-Prague
-  homepage: https://github.com/tupinek/Map-Tube-Prague
+  homepage: https://github.com/michal-josef-spacek/Map-Tube-Prague
   license: http://opensource.org/licenses/artistic-license-2.0.php
-  repository: git://github.com/tupinek/Map-Tube-Prague
+  repository: git://github.com/michal-josef-spacek/Map-Tube-Prague
 version: '0.15'
